[gd_scene load_steps=12 format=2]

[ext_resource path="res://minigames/opening/opening-game-bg.png" type="Texture" id=1]
[ext_resource path="res://minigames/opening/Bottle.tscn" type="PackedScene" id=2]
[ext_resource path="res://minigames/opening/Opener.tscn" type="PackedScene" id=3]
[ext_resource path="res://minigames/opening/OpeningGame.gd" type="Script" id=4]
[ext_resource path="res://minigames/opening/BottleCap.tscn" type="PackedScene" id=5]
[ext_resource path="res://minigames/opening/open-bottle.mp3" type="AudioStream" id=6]
[ext_resource path="res://minigames/opening/open-bottle-drop-cap.mp3" type="AudioStream" id=7]
[ext_resource path="res://minigames/opening/particle.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 160, 10 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.198198 ), 0.0, 3.22024, 0, 0, Vector2( 0.629464, 0.945946 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.3525 )
colors = PoolColorArray( 0.992157, 0.992157, 0.992157, 0.541176, 0.215686, 0.15671, 0, 0 )

[node name="OpeningGame" type="Node2D"]
pause_mode = 2
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 320.0
margin_bottom = 200.0
mouse_filter = 0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2

[node name="Bottle" parent="." instance=ExtResource( 2 )]
position = Vector2( 100, 100 )

[node name="BottleCap" parent="." instance=ExtResource( 5 )]
position = Vector2( 100, 100 )

[node name="Opener" parent="." instance=ExtResource( 3 )]
position = Vector2( 219, 147 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 160, 208 )
shape = SubResource( 1 )

[node name="OpenBeerSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="DropCapSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="OpeningParticles" type="CPUParticles2D" parent="."]
position = Vector2( 100, 100 )
emitting = false
amount = 80
one_shot = true
explosiveness = 0.86
texture = ExtResource( 8 )
emission_shape = 1
emission_sphere_radius = 6.38
direction = Vector2( 1, 1 )
spread = 56.23
gravity = Vector2( 0, 89 )
initial_velocity = 415.17
initial_velocity_random = 0.15
scale_amount = 5.0
scale_amount_curve = SubResource( 3 )
color_ramp = SubResource( 2 )

[connection signal="gui_input" from="Background" to="." method="_on_background_input"]
[connection signal="ready_to_open_change" from="BottleCap" to="." method="_on_bottlecap_ready_to_open_change"]
[connection signal="finished" from="DropCapSound" to="." method="_on_drop_cap_sound_finished"]
